kubernetes/storage-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-manager
  namespace: storage-manager
spec:
  ingressClassName: nginx
  rules:
    - host: storage-manager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django
                port:
                  number: 8000
